--- a/js/console.html
+++ b/js/console.html
@@ -6,7 +6,20 @@
   <body>
     <p>Using the development console. Press [f12] and click the console tab.</p>
     <script>
-      console.log('Hello world! Welcome to the world of JavaScript');
+      var greeting = 'Hello';
+      var who = 'World';
+      var msg = greeting + ' ' + who;
+      var message = 'Hello world! Welcome to the world of JavaScript';
+      console.log(msg);
+
+
+      var num1 =  '35';
+      var num2 = 7;
+      var result = num1 + num2;
+
+      console.log(result);
+
     </script>
   </body>
 </html>
+
