--- a/js/events/onchange.html
+++ b/js/events/onchange.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Events - OnClick Example</title>
+      <title>Change Events</title>
   </head> 
   <body>
-    <div id="demo"></div>
+     <div id="demo"></div>
+     <div id="demo1"></div>
+     <select id="options">
+        <option>--Pick an Option--</option>
+        <option value="a">A</option>
+        <option value="b">B</option>
+        <option value="c">C</option>
+      </select>
 
     <!-- <button onclick="document.getElementById('demo').innerHTML = Date()">What time is it?</button> -->
     <!-- <button onclick="showDate('demo');">What time is it?</button> -->
@@ -20,6 +27,18 @@
   btn.addEventListener("click", ()=>{
     showDate('demo');
   });    
+
+  function setValue(element) {
+   let option = document.getElementById('options').value;
+   document.getElementById(element).innerHTML = option;
+}
+
+// Function to add event listener to button#time
+var list = document.getElementById("options");
+list.addEventListener("change", ()=>{
+    setValue('demo1')
+});
+
     </script>
   </body>
 </html>
